Create runCommand utility function
Create a function to run a child process and capture the output.
Also create a function to suppress popup error dialogs from our
process and from child processes and call it at startup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ endif()
 
 set(KWSYS_NAMESPACE cxsys)
 set(KWSYS_USE_Encoding 1)
+set(KWSYS_USE_Process 1)
 set(KWSYS_USE_RegularExpression 1)
 set(KWSYS_USE_SystemTools 1)
 set(KWSYS_HEADER_ROOT ${CastXML_BINARY_DIR}/src)
