Detect settings from GNU-like compilers
Implement '--castxml-cc-gnu' option to detect preprocessor settings and
the target triplet from GNU-like compilers.  Run the compiler command
with "-E -dM -v empty.cpp" and capture stdout and stderr.  Treat the
stdout as the preprocessor predefines block and parse it to extract the
target architecture.  Parse the stderr to extract the header file search
path.

Install the now-populated share/castxml resource directory to the
CastXML_INSTALL_DATA_DIR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,5 @@ include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 
 add_subdirectory(src)
+
+install(DIRECTORY share/castxml/ DESTINATION "${CastXML_INSTALL_DATA_DIR}")
