Make Clang resources available to our driver
Make the Clang resources available to CastXML.  From the build tree
simply find and reference the resources installed with Clang.  Install
the resources in our own resource directory for re-distribution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,23 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 
+set(CLANG_RESOURCE_DIR "" CACHE PATH "Clang resource directory")
+if(NOT CLANG_RESOURCE_DIR)
+  set(v ${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR})
+  foreach(d ${LLVM_LIBRARY_DIRS})
+    if(IS_DIRECTORY "${d}/clang/${v}/include")
+      set(CLANG_RESOURCE_DIR ${d}/clang/${v})
+      break()
+    endif()
+  endforeach()
+endif()
+
+if(CLANG_RESOURCE_DIR)
+  install(DIRECTORY ${CLANG_RESOURCE_DIR}/include
+    DESTINATION "${CastXML_INSTALL_DATA_DIR}/clang"
+    )
+endif()
+
 add_subdirectory(src)
 
 install(DIRECTORY share/castxml/ DESTINATION "${CastXML_INSTALL_DATA_DIR}")
