Set up Clang AST visitor infrastructure for XML output
Create an API to perform the AST walk and XML output generation.

Create a queue that can hold both clang::Decl and clang::QualType nodes.
Add the main translation unit Decl to the queue.  Follow the queue until
empty while adding new nodes to the queue only if they represent
complete types or declarations.  Then queue the incomplete nodes and
follow the queue again until empty.  This will allow all complete class
types to be output as needed followed by types that are referenced but
do not need complete output (like a pointed-to type).

Use "clang/AST/DeclNodes.inc" and "clang/AST/TypeNodes.def" to dispatch
visitation to a method dedicated to each AST node kind/type-class.  Use
a visitor base class to provide an implementation for every visitation
method that simply reports the node as Unimplemented.  This will allow
us to incrementally implement output for each AST node.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(castxml
 
   Detect.cxx Detect.h
   Options.h
+  Output.cxx Output.h
   RunClang.cxx RunClang.h
   Utils.cxx Utils.h
   )
