Output: Generate declared Namespace elements
Implement the OutputNamespaceDecl method to generate a Namespace
element for explicitly declared namespaces.  Report the name="",
context="", and members="" of the namespace.  Queue its members.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,3 +50,5 @@ castxml_test_cmd(gccxml-and-E --castxml-gccxml -E)
 castxml_test_cmd(gccxml-twice --castxml-gccxml --castxml-gccxml)
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
+
+castxml_test_gccxml(Namespace)
