Output: Generate PointerType elements
Implement the OutputPointerType method to generate the PointerType
element.  Report the type="" of the pointee and queue it.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,3 +56,4 @@ castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Namespace)
+castxml_test_gccxml(PointerType)
