Output: Generate Variable elements
Implement the OutputVarDecl method to generate the Variable element.
Report the name="", type="", context="", location="", and storage
class (static="1" or extern="1") of the declaration.  Queue the
type.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,3 +60,4 @@ castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Namespace)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
+castxml_test_gccxml(Variable)
