Output: Generate Function and related elements
Implement the OutputFunctionDecl, OutputCXXMethodDecl,
OutputCXXConversionDecl, OutputCXXConstructorDecl, and
OutputCXXDestructorDecl methods to generate these elements.  Report the
name="", returns="", context="", and location="" of the function
declaration.  Also add static="1", explicit="1", const="1", virtual="1",
inline="1", extern="1", and artificial="1" (compiler generated), and
throws="..." as appropriate.

Inside the function element generate Argument elements describing the
function parameters.  For each argument report the name="", type="",
and location="".  Queue the argument types.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,6 +56,8 @@ castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(CvQualifiedType)
+castxml_test_gccxml(Function)
+castxml_test_gccxml(Function-throw)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Namespace)
 castxml_test_gccxml(PointerType)
