Add test infrastructure to run castxml and validate results
Create a test/run.cmake test driver script that uses execute_process to
run a castxml test command line and then compares the results to those
we expect.  Validate the process result (return code) and the content of
stdout and stderr.  In test/CMakeLists.txt create a castxml_test_cmd
macro to add tests that use "run.cmake".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@
 cmake_minimum_required(VERSION 2.8.5)
 project(CastXML)
 
+include(CTest)
+
 # Build tree locations.
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CastXML_BINARY_DIR}/bin")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CastXML_BINARY_DIR}/lib")
@@ -68,6 +70,10 @@ if(CLANG_RESOURCE_DIR)
 endif()
 
 add_subdirectory(src)
+
+if(BUILD_TESTING)
+  add_subdirectory(test)
+endif()
 
 install(DIRECTORY share/castxml/ DESTINATION "${CastXML_INSTALL_DATA_DIR}")
 
