Teach test infrastructure to check generated xml files
Teach test/run.cmake to optionally read the actual and expected xml
content and compare them.  Add to test/CMakeLists.txt a
castxml_test_gccxml macro to add tests for --castxml-gccxml mode.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,22 @@ macro(castxml_test_cmd test)
     )
 endmacro()
 
+macro(castxml_test_gccxml test)
+  set(command $<TARGET_FILE:castxml>
+    --castxml-gccxml --castxml-start start
+    -std=c++98
+    ${CMAKE_CURRENT_LIST_DIR}/input/${test}.cxx
+    )
+  add_test(
+    NAME gccxml.${test}
+    COMMAND ${CMAKE_COMMAND}
+    "-Dcommand:STRING=${command}"
+    "-Dtest=gccxml.${test}"
+    "-Dxml=${test}.xml"
+    -P ${CMAKE_CURRENT_SOURCE_DIR}/run.cmake
+    )
+endmacro()
+
 castxml_test_cmd(no-arguments)
 
 castxml_test_cmd(cc-missing --castxml-cc-gnu)
