--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,3 +57,4 @@ castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Namespace)
 castxml_test_gccxml(PointerType)
+castxml_test_gccxml(ReferenceType)
