Restrict --castxml-gccxml to C++98 and C89 modes
The gccxml output format was designed for C++98 and does not support
constructs in C++11 or other newer language standards.  Reject such
combinations up front.  An alternative output format will be needed
for such interfaces.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,11 @@ macro(castxml_test_gccxml test)
     )
 endmacro()
 
+set(empty_c ${CMAKE_CURRENT_LIST_DIR}/input/empty.c)
+set(empty_cxx ${CMAKE_CURRENT_LIST_DIR}/input/empty.cxx)
+set(empty_m ${CMAKE_CURRENT_LIST_DIR}/input/empty.m)
+set(empty_mm ${CMAKE_CURRENT_LIST_DIR}/input/empty.mm)
+
 castxml_test_cmd(no-arguments)
 
 castxml_test_cmd(cc-missing --castxml-cc-gnu)
@@ -48,6 +53,12 @@ castxml_test_cmd(cc-twice --castxml-cc-msvc cl --castxml-cc-gnu gcc)
 castxml_test_cmd(cc-unknown --castxml-cc-unknown cc)
 castxml_test_cmd(gccxml-and-E --castxml-gccxml -E)
 castxml_test_cmd(gccxml-twice --castxml-gccxml --castxml-gccxml)
+castxml_test_cmd(gccxml-and-c99 --castxml-gccxml -std=c99 ${empty_c})
+castxml_test_cmd(gccxml-and-c11 --castxml-gccxml -std=c11 ${empty_c})
+castxml_test_cmd(gccxml-and-c++11 --castxml-gccxml -std=c++11 ${empty_cxx})
+castxml_test_cmd(gccxml-and-c++1y --castxml-gccxml -std=c++1y ${empty_cxx})
+castxml_test_cmd(gccxml-and-objc1 --castxml-gccxml ${empty_m})
+castxml_test_cmd(gccxml-and-objc2 --castxml-gccxml ${empty_mm})
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
 
