--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,6 +69,7 @@ castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-incomplete)
+castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-throw)
