--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -77,4 +77,5 @@ castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Namespace)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
+castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Variable)
