--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -74,7 +74,10 @@ castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-throw)
 castxml_test_gccxml(FundamentalType)
+castxml_test_gccxml(Method)
 castxml_test_gccxml(Namespace)
+castxml_test_gccxml(OperatorFunction)
+castxml_test_gccxml(OperatorMethod)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(Typedef-to-Class-template)
