--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,6 +72,7 @@ castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Function)
+castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Method)
