--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,6 +71,7 @@ castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
+castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
