--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -84,5 +84,6 @@ castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Variable)
+castxml_test_gccxml(Variable-in-Class)
 
 castxml_test_gccxml(qualified-type-name)
