Output: Map Paren type to the inner type

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -82,6 +82,7 @@ castxml_test_gccxml(OperatorFunction)
 castxml_test_gccxml(OperatorMethod)
 castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
+castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Variable)
 castxml_test_gccxml(Variable-in-Class)
