--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,6 +75,7 @@ castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
+castxml_test_gccxml(FunctionType)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Method)
 castxml_test_gccxml(Namespace)
