Output: Generate MethodType and OffsetType elements
Implement the OutputMemberPointerType method.  If a type is a pointer to
a data member, call a new OutputOffsetType method to generate an
OffsetType element representing it directly.  If a type is a pointer to
a function member, queue a DumpType node that holds the pointee function
type and the containing class.  Teach the main OutputType method to
recognize this case and dispatch to a new OutputMethodType method to
generate a MethodType element.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -80,7 +80,11 @@ castxml_test_gccxml(FunctionType)
 castxml_test_gccxml(FunctionType-variadic)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(Method)
+castxml_test_gccxml(MethodType)
+castxml_test_gccxml(MethodType-cv)
 castxml_test_gccxml(Namespace)
+castxml_test_gccxml(OffsetType)
+castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
 castxml_test_gccxml(OperatorMethod)
 castxml_test_gccxml(PointerType)
