Output: Generate Enumeration elements
Implement the OutputEnumDecl method to generate the Enumeration element.
Report the name="", context="", and location="" of the declaration.
Inside the Enumeration element generate EnumValue elements describing
the enumeration names and initializers.

Also map enum types to the corresponding declarations.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,6 +71,7 @@ castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
+castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-template)
@@ -91,6 +92,7 @@ castxml_test_gccxml(PointerType)
 castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
+castxml_test_gccxml(Typedef-to-Enumeration)
 castxml_test_gccxml(Variable)
 castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
