--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -68,6 +68,7 @@ castxml_test_cmd(start-missing --castxml-start)
 castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
+castxml_test_gccxml(Class-abstract)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
