Output: Report class bases
Inside Class elements generate Base elements reporting the type="",
access="", and virtual="" information about base classes, if any.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,6 +69,7 @@ castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
+castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
