--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -70,6 +70,7 @@ castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
 castxml_test_gccxml(Class-bases)
+castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(CvQualifiedType)
