--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,7 +72,9 @@ castxml_test_gccxml(Class-abstract)
 castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-incomplete)
+castxml_test_gccxml(Class-member-template)
 castxml_test_gccxml(Class-template)
+castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Field)
