test: Add case for using declaration in derived class
Cover a class that brings overloads from a base through a using
declaration.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -103,6 +103,7 @@ castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
 
 castxml_test_gccxml(qualified-type-name)
+castxml_test_gccxml(using-declaration-class)
 castxml_test_gccxml(using-declaration-ns)
 castxml_test_gccxml(using-declaration-start)
 castxml_test_gccxml(using-directive-ns)
