test: Add cases for C-mode gccxml-like output
Although gccxml did not support C, it was occasionally requested.  The
gccxml output format supports C and Clang can easily handle parsing it.
Add test cases that verify Clang can parse sources as C code and not
C++.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -116,3 +116,8 @@ castxml_test_gccxml(using-declaration-ns)
 castxml_test_gccxml(using-declaration-start)
 castxml_test_gccxml(using-directive-ns)
 castxml_test_gccxml(using-directive-start)
+
+castxml_test_gccxml_c(FundamentalType)
+castxml_test_gccxml_c(Typedef-called-class)
+
+castxml_test_gccxml_c(invalid)
