--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -93,6 +93,7 @@ castxml_test_gccxml(Function-variadic)
 castxml_test_gccxml(FunctionType)
 castxml_test_gccxml(FunctionType-variadic)
 castxml_test_gccxml(FundamentalType)
+castxml_test_gccxml(FundamentalTypes)
 castxml_test_gccxml(Method)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
