castxml: Expand response file references on command line
Add support for @args.rsp file references on the command line.
Add test cases covering missing response files, empty response files,
and response files that actually provide arguments.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -73,6 +73,9 @@ castxml_test_cmd(gccxml-and-objc1 --castxml-gccxml ${empty_m})
 castxml_test_cmd(gccxml-and-objc2 --castxml-gccxml ${empty_mm})
 castxml_test_cmd(o-missing -o)
 castxml_test_cmd(start-missing --castxml-start)
+castxml_test_cmd(rsp-empty @${input}/empty.rsp)
+castxml_test_cmd(rsp-missing @${input}/does-not-exist.rsp)
+castxml_test_cmd(rsp-o-missing @${input}/o-missing.rsp)
 
 castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
