--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@
 cmake_minimum_required(VERSION 2.8.5)
 project(CastXML)
 
+include(src/Version.cmake)
+
 include(CTest)
 
 # Build tree locations.
