test: Add case for class template bases

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,7 @@ castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-member-template)
 castxml_test_gccxml(Class-template)
+castxml_test_gccxml(Class-template-bases)
 castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Enumeration)
