--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -83,6 +83,7 @@ castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
 castxml_test_gccxml(Class-bases)
+castxml_test_gccxml(Class-forward)
 castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-member-template)
