--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -86,6 +86,7 @@ castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-forward)
 castxml_test_gccxml(Class-friends)
 castxml_test_gccxml(Class-incomplete)
+castxml_test_gccxml(Class-incomplete-twice)
 castxml_test_gccxml(Class-member-template)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(Class-template-bases)
