--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -82,6 +82,7 @@ castxml_test_gccxml(ArrayType)
 castxml_test_gccxml(ArrayType-incomplete)
 castxml_test_gccxml(Class)
 castxml_test_gccxml(Class-abstract)
+castxml_test_gccxml(Class-base-typedef)
 castxml_test_gccxml(Class-bases)
 castxml_test_gccxml(Class-forward)
 castxml_test_gccxml(Class-friends)
