Output: Add default="" to Function Argument elements

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -90,12 +90,14 @@ castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-incomplete-twice)
 castxml_test_gccxml(Class-member-template)
 castxml_test_gccxml(Class-template)
+castxml_test_gccxml(Class-template-Method-Argument-default)
 castxml_test_gccxml(Class-template-bases)
 castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
+castxml_test_gccxml(Function-Argument-default)
 castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
 castxml_test_gccxml(Function-variadic)
