--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -95,6 +95,7 @@ castxml_test_gccxml(Class-template-bases)
 castxml_test_gccxml(Class-template-member-template)
 castxml_test_gccxml(CvQualifiedType)
 castxml_test_gccxml(Enumeration)
+castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-Argument-default)
@@ -118,6 +119,7 @@ castxml_test_gccxml(ReferenceType)
 castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Typedef-to-Enumeration)
+castxml_test_gccxml(Typedef-to-Enumeration-anonymous)
 castxml_test_gccxml(Variable)
 castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
