--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -98,6 +98,7 @@ castxml_test_gccxml(Enumeration)
 castxml_test_gccxml(Enumeration-anonymous)
 castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
+castxml_test_gccxml(Function-Argument-decay)
 castxml_test_gccxml(Function-Argument-default)
 castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
