--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -121,6 +121,7 @@ castxml_test_gccxml(Typedef-paren)
 castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Typedef-to-Enumeration)
 castxml_test_gccxml(Typedef-to-Enumeration-anonymous)
+castxml_test_gccxml(Typedef-to-FundamentalType-mode)
 castxml_test_gccxml(Variable)
 castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
