Output: Drop from Namespace members="" non-inline class members
Clang presents non-inline class members in the list of declarations in
a namespace.  Teach PrintMembersAttribute to skip declarations whose
actual context is not the context that listed them.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -118,6 +118,9 @@ castxml_test_gccxml(Method)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
 castxml_test_gccxml(Namespace)
+castxml_test_gccxml(Namespace-Class-members)
+castxml_test_gccxml(Namespace-Class-template-members)
+castxml_test_gccxml(Namespace-Function-template-members)
 castxml_test_gccxml(OffsetType)
 castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
