test: Show duplication of reference-to-class-template-specialization types
Clang generates a distinct TemplateSpecializationType for each
appearance of A<T> for some template A<>.  They are all sugar for an
underlying RecordType.  While they all share the same canonical type,
LValueReferenceType instances that refer to them are also distinct and
do not share the same canonical type because each has a different
pointee type.

Add tests demonstrating cases where this causes duplicate ReferenceType
elements to be generated.  Mark them as "broken" and add a note in the
expected output that matches nothing but documents the problem.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,6 +48,10 @@ macro(castxml_test_gccxml test)
   castxml_test_gccxml_common(gccxml cxx -std=c++98 ${test})
 endmacro()
 
+macro(castxml_test_gccxml_broken test)
+  castxml_test_gccxml_common(gccxml.broken cxx -std=c++98 ${test})
+endmacro()
+
 macro(castxml_test_gccxml_c test)
   castxml_test_gccxml_common(gccxml.c c -std=c89 ${test})
 endmacro()
@@ -148,3 +152,6 @@ castxml_test_gccxml_c(FundamentalType)
 castxml_test_gccxml_c(Typedef-called-class)
 
 castxml_test_gccxml_c(invalid)
+
+castxml_test_gccxml_broken(Class-template-constructor-template)
+castxml_test_gccxml_broken(ReferenceType-to-Class-template)
