Output: Skip through extern "C" contexts to enclosing namespace
The gccxml output format has no representation for extern "C"
declaration contexts, so simply report the enclosing namespace.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -139,6 +139,7 @@ castxml_test_gccxml(Typedef-to-Class-template)
 castxml_test_gccxml(Typedef-to-Enumeration)
 castxml_test_gccxml(Typedef-to-Enumeration-anonymous)
 castxml_test_gccxml(Typedef-to-FundamentalType-mode)
+castxml_test_gccxml(Typedef-to-extern-C-FundamentalType-mode)
 castxml_test_gccxml(Variable)
 castxml_test_gccxml(Variable-in-Class)
 castxml_test_gccxml(Variable-init)
