castxml: Use parentheses for '--castxml-cc-<id>' commands
Avoid requiring the option to be last by using the form

 --castxml-cc-<id> "(" <cc> <cc-opt>... ")"

to specify compiler commands with arguments.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,6 +67,10 @@ castxml_test_cmd(no-arguments)
 castxml_test_cmd(version --version)
 
 castxml_test_cmd(cc-missing --castxml-cc-gnu)
+castxml_test_cmd(cc-option --castxml-cc-gnu -)
+castxml_test_cmd(cc-paren-castxml --castxml-cc-gnu "(" --castxml-cc-msvc ")")
+castxml_test_cmd(cc-paren-nested --castxml-cc-gnu "(" "(" ")" ")")
+castxml_test_cmd(cc-paren-unbalanced --castxml-cc-gnu "(")
 castxml_test_cmd(cc-twice --castxml-cc-msvc cl --castxml-cc-gnu gcc)
 castxml_test_cmd(cc-unknown --castxml-cc-unknown cc)
 castxml_test_cmd(gccxml-and-E --castxml-gccxml -E)
