--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ endif()
 if(NOT CastXML_INSTALL_DOC_DIR)
   set(CastXML_INSTALL_DOC_DIR doc/castxml)
 endif()
+if(NOT CastXML_INSTALL_MAN_DIR)
+  set(CastXML_INSTALL_MAN_DIR man)
+endif()
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU|Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
@@ -75,6 +78,8 @@ add_subdirectory(src)
 if(BUILD_TESTING)
   add_subdirectory(test)
 endif()
+
+add_subdirectory(doc)
 
 install(DIRECTORY share/castxml/ DESTINATION "${CastXML_INSTALL_DATA_DIR}")
 
