Output: Skip empty declarations in class or namespace members
Clang creates an "EmptyDecl" for a stray semicolon.  Ignore it.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -134,6 +134,7 @@ castxml_test_gccxml(Namespace)
 castxml_test_gccxml(Namespace-Class-members)
 castxml_test_gccxml(Namespace-Class-template-members)
 castxml_test_gccxml(Namespace-Function-template-members)
+castxml_test_gccxml(Namespace-empty)
 castxml_test_gccxml(OffsetType)
 castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
