Port to LLVM/Clang SVN r205446
Build with compiler flag '-std=c++11' since the Clang API now uses
C++11.  Update our implementation to account for Clang API changes.
Update our search for the Clang resource directory to include the
LLVM/Clang version patch level.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ if(NOT CastXML_INSTALL_MAN_DIR)
 endif()
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU|Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++11")
 endif()
 
 set(KWSYS_NAMESPACE cxsys)
@@ -55,10 +55,13 @@ find_package(LLVM REQUIRED)
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
+if(NOT DEFINED LLVM_VERSION_PATCH)
+  set(LLVM_VERSION_PATCH 0)
+endif()
 
 set(CLANG_RESOURCE_DIR "" CACHE PATH "Clang resource directory")
 if(NOT CLANG_RESOURCE_DIR)
-  set(v ${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR})
+  set(v ${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.${LLVM_VERSION_PATCH})
   foreach(d ${LLVM_LIBRARY_DIRS})
     if(IS_DIRECTORY "${d}/clang/${v}/include")
       set(CLANG_RESOURCE_DIR ${d}/clang/${v})
