test: Support zero or many alternative expected result file names
Teach test/run.cmake to loop over a list of possible expected result
names.  This will allow tests results to be specialized in certain
cases without duplicating common results.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,7 +22,7 @@ macro(castxml_test_cmd test)
     NAME cmd.${test}
     COMMAND ${CMAKE_COMMAND}
     "-Dcommand:STRING=${command}"
-    "-Dtest=cmd.${test}"
+    "-Dexpect=cmd.${test}"
     -P ${CMAKE_CURRENT_SOURCE_DIR}/run.cmake
     )
 endmacro()
@@ -38,7 +38,7 @@ macro(castxml_test_gccxml_common prefix ext std test)
     NAME ${prefix}.${test}
     COMMAND ${CMAKE_COMMAND}
     "-Dcommand:STRING=${command}"
-    "-Dtest=${prefix}.${test}"
+    "-Dexpect=${prefix}.${test}"
     "-Dxml=${prefix}.${test}.xml"
     "-Dxmllint=${LIBXML2_XMLLINT_EXECUTABLE}"
     -P ${CMAKE_CURRENT_SOURCE_DIR}/run.cmake
