test: Split gccxml test macros by language and standard
Factor out macros to add tests by individual language standard from
those that cover a group of language standards.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,16 +45,28 @@ macro(castxml_test_gccxml_common prefix ext std test)
     )
 endmacro()
 
-macro(castxml_test_gccxml test)
+macro(castxml_test_gccxml_c89 test)
+  castxml_test_gccxml_common(gccxml c c89 ${test})
+endmacro()
+
+macro(castxml_test_gccxml_cxx98 test)
   castxml_test_gccxml_common(gccxml cxx c++98 ${test})
 endmacro()
 
-macro(castxml_test_gccxml_broken test)
+macro(castxml_test_gccxml_broken_cxx98 test)
   castxml_test_gccxml_common(gccxml.broken cxx c++98 ${test})
 endmacro()
 
 macro(castxml_test_gccxml_c test)
-  castxml_test_gccxml_common(gccxml c c89 ${test})
+  castxml_test_gccxml_c89(${test})
+endmacro()
+
+macro(castxml_test_gccxml test)
+  castxml_test_gccxml_cxx98(${test})
+endmacro()
+
+macro(castxml_test_gccxml_broken test)
+  castxml_test_gccxml_broken_cxx98(${test})
 endmacro()
 
 set(input ${CMAKE_CURRENT_LIST_DIR}/input)
