--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -143,6 +143,7 @@ castxml_test_gccxml(Field)
 castxml_test_gccxml(Function)
 castxml_test_gccxml(Function-Argument-decay)
 castxml_test_gccxml(Function-Argument-default)
+castxml_test_gccxml(Function-rvalue-reference)
 castxml_test_gccxml(Function-template)
 castxml_test_gccxml(Function-throw)
 castxml_test_gccxml(Function-variadic)
@@ -151,6 +152,7 @@ castxml_test_gccxml(FunctionType-variadic)
 castxml_test_gccxml(FundamentalType)
 castxml_test_gccxml(FundamentalTypes)
 castxml_test_gccxml(Method)
+castxml_test_gccxml(Method-rvalue-reference)
 castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
 castxml_test_gccxml(Namespace)
