Output: Drop class template partial specializations from output
Since gccxml format does not support uninstantiated templates we must
not output any partial specializations either.  Skip class template
partial specializations when traversing context members.  Desugar
non-dependent typedef members of class template partial specializations.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -130,6 +130,7 @@ castxml_test_gccxml(Class-implicit-members)
 castxml_test_gccxml(Class-incomplete)
 castxml_test_gccxml(Class-incomplete-twice)
 castxml_test_gccxml(Class-member-template)
+castxml_test_gccxml(Class-partial-template-member-Typedef)
 castxml_test_gccxml(Class-template)
 castxml_test_gccxml(Class-template-Method-Argument-default)
 castxml_test_gccxml(Class-template-bases)
@@ -157,6 +158,7 @@ castxml_test_gccxml(MethodType)
 castxml_test_gccxml(MethodType-cv)
 castxml_test_gccxml(Namespace)
 castxml_test_gccxml(Namespace-Class-members)
+castxml_test_gccxml(Namespace-Class-partial-template-members)
 castxml_test_gccxml(Namespace-Class-template-members)
 castxml_test_gccxml(Namespace-Function-template-members)
 castxml_test_gccxml(Namespace-empty)
