Output: Traverse extern "C" namespace members
Teach AddDeclContextMembers to recurse on LinkageSpecDecl members.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -162,6 +162,7 @@ castxml_test_gccxml(Namespace-Class-partial-template-members)
 castxml_test_gccxml(Namespace-Class-template-members)
 castxml_test_gccxml(Namespace-Function-template-members)
 castxml_test_gccxml(Namespace-empty)
+castxml_test_gccxml(Namespace-extern-C-members)
 castxml_test_gccxml(OffsetType)
 castxml_test_gccxml(OffsetType-cv)
 castxml_test_gccxml(OperatorFunction)
